Tests/Negative/UndefinedTypeInMod.mr
mod M {
    pub var x: UnknownType;
}
